--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
             </div>
             <div>
                 <label for="author">Author</label>
-                <input type="text" id="title" class="u-full-width">
+                <input type="text" id="author" class="u-full-width">
             </div>
             <div>
                 <label for="isbn">ISBN</label>
                 <input type="text" id="isbn" class="u-full-width">
             </div>
+            <div>
+                <input type="submit" value="submit" class="u-full-width">
+            </div>
         </form>
-        <div>
-            <input type="submit" value="submit" class="u-full-width">
-        </div>
         <table class="u-full-width">
             <thead>
                 <tr>
